Add some error checking when getting snapshots

https://bugzilla.gnome.org/show_bug.cgi?id=761065